# AegisEngine

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  ClockListener.hpp  Drawable.cpp  Drawable.hpp  Entity.hpp  Log.cpp  Log.hpp  ResourceHBase.cpp  ResourceHBase.hpp  ResourceHolder.hpp  ResourceManager.cpp  ResourceManager.hpp  Types.hpp  Utils.cpp  Utils.hpp
src/component/: Button.cpp  Button.hpp  Debug.cpp  Debug.hpp  NeuralNet.cpp  NeuralNet.hpp  Neuron.cpp  Neuron.hpp  NeuronalNet.cpp  NeuronalNet.hpp  Window.cpp  Window.hpp  WorldMap.cpp  WorldMap.hpp
src/test/: main.cpp
